# webrute

./: README.md  requirements.txt  setup.cfg
tests/integrated/: generate.py  setup_tests.py  test_connect.py  test_runner.py
tests/integrated/webapp/: __init__.py  main.py
tests/unit/: test_attributes.py  test_functions.py  test_highlevel.py  test_util.py
webrute/: __init__.py  _attributes.py  _connect.py  _connector.py  _functions.py  _highlevel.py  _request.py  _response.py  _runner.py  _session.py  _target.py  _util.py  _webrute.py  exceptions.py
