[metadata]
name = webrute
version = 0.2.0
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Python bruteforce library for http requests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/webrute
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/webrute/issues
classifiers =
    Intended Audience :: Developers
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
keywords = 
    login
    website
    html-form
    secutity
    hacking
    bruteforce

[options]
packages = find:
install_requires =
    broote>=0.6.0, <0.7.0
    httpx

python_requires = >=3.6

[options.packages.find]
exclude =
    tests
